Subscription-Manager: Allow to get all users and retrieve subscription information.